SAR Blai Sandbox/src/objects/Ocupacion__c.object
<CustomObject>
    <description>Ocupación de los centros competidores</description>
    <fields>
        <fullName>Ano__c</fullName>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competidor__c</fullName>
        <label>Competidor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QC89AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ocupación competidores</relationshipLabel>
        <relationshipName>Ocupaci_n_competidores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_Priv_CD__c</fullName>
        <label>Estimación de la ocupación (Priv) CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_Priv__c</fullName>
        <label>Estimación de la ocupación (Priv)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_Pub_CD__c</fullName>
        <label>Estimación de la ocupación (Púb) CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_Pub__c</fullName>
        <label>Estimación de la ocupación (Púb)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_CD_Privadas__c</fullName>
        <label>Nº Plazas CD Privadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_RD_Privada__c</fullName>
        <label>Nº Plazas RD Privada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Plazas_RD_Publicas__c</fullName>
        <label>Nº Plazas RD Públicas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_plazas_CD_Publicas__c</fullName>
        <label>Nº plazas CD Públicas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porcentaje_ocupacion_Priv_CD__c</fullName>
        <formula>Estimacion_de_la_ocupacion_Priv_CD__c / N_Plazas_CD_Privadas__c</formula>
        <label>% ocupación Priv CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Porcentaje_ocupacion_Priv__c</fullName>
        <formula>Estimacion_de_la_ocupacion_Priv__c / N_Plazas_RD_Privada__c</formula>
        <label>% ocupación Priv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Porcentaje_ocupacion_Pub_CD__c</fullName>
        <formula>Estimacion_de_la_ocupacion_Pub_CD__c / N_plazas_CD_Publicas__c</formula>
        <label>% ocupación Púb CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Porcentaje_ocupacion_Pub__c</fullName>
        <formula>Estimacion_de_la_ocupacion_Pub__c / N_Plazas_RD_Publicas__c</formula>
        <label>% ocupación Púb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Febrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octubre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_estimacion_CD__c</fullName>
        <formula>Estimacion_de_la_ocupacion_Priv_CD__c + Estimacion_de_la_ocupacion_Pub_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total estimación CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_estimacion_RD__c</fullName>
        <formula>Estimacion_de_la_ocupacion_Priv__c + Estimacion_de_la_ocupacion_Pub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total estimación RD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ocupacion_CD__c</fullName>
        <formula>( Estimacion_de_la_ocupacion_Pub_CD__c + Estimacion_de_la_ocupacion_Priv_CD__c )/( N_plazas_CD_Publicas__c + N_Plazas_CD_Privadas__c )</formula>
        <label>% Total ocupación CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ocupacion_RD__c</fullName>
        <formula>(Estimacion_de_la_ocupacion_Pub__c + Estimacion_de_la_ocupacion_Priv__c )/( N_Plazas_RD_Publicas__c + N_Plazas_RD_Privada__c )</formula>
        <label>% Total ocupación RD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Ocupación competidor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{000000}</displayFormat>
        <label>Contador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ocupación competidores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>